added css link to index

--- a/css/main.css
+++ b/css/main.css
@@ -2,5 +2,5 @@ html {
   font-family: PT Serif;
   font-size: 1.125rem;
   line-height: 1.5;
-  background-color: #222;
+  background-color: #c9b5ab;
 }
