--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,41 @@
 html {
   font-family: PT Serif;
-  font-size: 1.125rem;
+  color: #222;
   line-height: 1.5;
   background-color: #c9b5ab;
+}
+
+h1 {
+  color: #3f1622;
+  font-size: 1.5rem;
+  font-family: PT Sans;
+  font-weight: bold;
+}
+
+h2 {
+  color: #3f1622;
+  font-size: 1.5rem;
+  font-family: PT Sans;
+  font-weight: bold;
+}
+
+nav ol li {
+  color: #8f2440;
+  font-family: PT Sans;
+  font-weight: bold;
+  list-style-type: none;
+}
+
+a:link {
+  color: #c9b5ab;
+  text-decoration: none;
+}
+
+a:visited {
+  color: #8f2440;
+  text-decoration: none;
+}
+
+img {
+  width: 100%;
 }
