--- a/css/main.css
+++ b/css/main.css
@@ -1,29 +1,28 @@
 html {
-  font-family: PT Serif;
-  color: #222;
-  line-height: 1.5;
   background-color: #c9b5ab;
+  line-height: 1.5;
+  color: #222;
 }
 
 h1 {
   color: #3f1622;
-  font-size: 1.5rem;
   font-family: PT Sans;
-  font-weight: bold;
+  font-size: 1.5rem;
+  font-weight: bold
 }
 
 h2 {
   color: #3f1622;
-  font-size: 1.5rem;
   font-family: PT Sans;
-  font-weight: bold;
+  font-size: 1.5rem;
+  font-weight: bold
 }
 
 nav ol li {
   color: #8f2440;
   font-family: PT Sans;
-  font-weight: bold;
   list-style-type: none;
+  font-weight: bold
 }
 
 a:link {
@@ -38,4 +37,20 @@ a:visited {
 
 img {
   width: 100%;
+}
+
+figcaption {
+  font-style: italic;
+  text-align: center;
+}
+
+.germ {
+  font-size: 1.125rem;
+  font-weight: bold
+}
+
+blockquote p {
+  font-size: 1.5rem;
+  font-style: italic;
+  font-weight: bold;
 }
