--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,11 @@ a:visited {
   text-decoration: none;
 }
 
+a:hover {
+  color: #3f1622;
+  text-decoration: underline;
+}
+
 img {
   width: 100%;
 }
